--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="header_items">
                 <div class="header_left">
                     <ul>
-                        <li>Новинки</li>
-                        <li>Женщинам</li>
-                        <li>Мужчинам</li>
-                        <li>Распродажа</li>
+                        <li><a href="#new">Новинки</a></li>
+                        <li><a href="#woman">Женщинам</a></li>
+                        <li><a href="#man">Мужчинам</a></li>
+                        <li><a href="#sales">Распродажа</a></li>
                     </ul>
                 </div>
                 <div class="header_center">
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="catalog_items">
             <div class="block">
-                <div class="block_title">
+                <div class="block_title" id="new">
                     <p>Новинки</p>
                     <a href="#">Смотреть все ></a>
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
             </div>
-            <div class="block">
+            <div class="block" id="man">
                 <div class="block_title">
                     <p>Мужчинам</p>
                     <a href="#">Смотреть все ></a>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
             </div>
-            <div class="block">
+            <div class="block" id="woman">
                 <div class="block_title">
                     <p>Женщинам</p>
                     <a href="#">Смотреть все ></a>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="block">
+            <div class="block" id="sales">
                 <div class="block_title">
                     <p>Распродажа</p>
                     <a href="#">Смотреть все ></a>
